--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "osama-mustafa",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
