FEATURE: Register User

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DB_NAME=library_system
 DB_HOST=localhost
 NODE_ENV=development
 PORT=3000
+
+# JWT Settings
+JWT_SECRET=hello_world
+JWT_EXPIRE=3d
+
