--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   app:
+    container_name: my_app
     build:
       context: .
       dockerfile: Dockerfile
@@ -18,11 +19,10 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+
   mysql:
     image: mysql:latest
     container_name: mysql
-    # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
-    # (this is just an example, not intended to be a production configuration)
     restart: always
     env_file:
       - ./.env
