--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ NODE_ENV=development
 PORT=3000
 
 # JWT Settings
-JWT_SECRET=hello_world
-JWT_EXPIRE=3d
+ACCESS_TOKEN_SECRET=hello_world
+ACCESS_TOKEN_EXPIRE=3d
