FEATURE: Send Reset Password Email

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,13 @@ PORT=3000
 
 # JWT Settings
 ACCESS_TOKEN_SECRET=hello_world
-ACCESS_TOKEN_EXPIRE=3d
+ACCESS_TOKEN_EXPIRE=1d
+REFRESH_TOKEN_SECRET=secret
+REFRESH_TOKEN_EXPIRE=30d
+
+# Email Settings e.g. Mailtrap
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=465
+EMAIL_USERNAME=mailtrap_user
+EMAIL_PASSWORD=mailtrap_password
+EMAIL_SENEDER=admin@example.com
