--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.0",
+    "nodemailer": "^6.9.11",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
