--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.0",
     "nodemailer": "^6.9.11",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
